# study-mode-backend-mcp-ui

./: .gitignore  main.py  pyproject.toml
chat_agents/: agent.py
config/: __init__.py  settings.py
mcp/: server.py  utils.py
pydantic_schemas/: schemas.py
routes/: chat.py
